2012-11-26  Vladimir Makarov  <vmakarov@redhat.com>

PR target/55277
	* gcc.target/i386/pr55227.c: New test.

2012-11-26  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/55277
	* lra-constraints.c (in_class_p): Check reg class contents too.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193824 138bc75d-0d04-0410-961f-82ee72b054a4